--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 	<hr>
 	
 	<h2>사진 및 관련 링</h2>	<br>
-	<img src="project1/loar.jpg" alt="로어올림푸스" width="200"/>
+	<img src="loar.jpg" alt="로어올림푸스" width="200"/>
 	<a href="https://comic.naver.com/webtoon/list.nhn?titleId=750558">로어 올림푸스</a> 
-	<img src="project1/ohmygod.png" alt="오마이갓" width="200"/>
+	<img src="ohmygod.png" alt="오마이갓" width="200"/>
 	<a href="https://comic.naver.com/webtoon/list.nhn?titleId=563786">ohmygod</a>
 </body>
 </html>
